{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 647,
  "lineage": "bd02af9e-a32e-a43b-01aa-af2fb79c5a81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:security-group/sg-051ca7db9a1222547",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-051ca7db9a1222547",
            "ingress": [],
            "name": "project_rds-sg",
            "name_prefix": "",
            "owner_id": "026668750147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project_rds-sg"
            },
            "tags_all": {
              "Name": "project_rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235d71f4836c100a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:security-group-rule/sgr-08510ebbf426818e6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08510ebbf426818e6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-051ca7db9a1222547",
            "security_group_rule_id": "sgr-08510ebbf426818e6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds-sg",
            "data.terraform_remote_state.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_rds_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:026668750147:security-group-rule/sgr-0f0c4688b2e401d36",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0f0c4688b2e401d36",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-051ca7db9a1222547",
            "security_group_rule_id": "sgr-0f0c4688b2e401d36",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds-sg",
            "data.terraform_remote_state.eks"
          ]
        }
      ]
    }
  ]
}